<resources>
    <string name="app_name">THE SPARKS FOUNDATION</string>
    <string name="banking_system_app">Banking System App</string>
    <string name="all_users">All Users</string>
    <string name="all_transactions">All Transactions</string>
    <string name="the_sparks_foundation_bank">THE SPARKS FOUNDATION BANK</string>
    <string name="todo">TODO</string>
    <string name="this_app_is_devolped_by_ravi_singh">This app is devolped by Ravi Singh</string>
    <string name="users">users</string>
    <string name="transaction_history">Transaction History</string>
</resources>